// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`not() success 1`] = `
[
  [
    true,
    {
      "kind": "word",
      "span": [
        0,
        3,
      ],
      "text": "foo",
    },
  ],
  [
    true,
    {
      "kind": "word",
      "span": [
        4,
        7,
      ],
      "text": "bar",
    },
  ],
]
`;

exports[`opt() makes failing match ok 1`] = `
{
  "value": [
    undefined,
    "foo",
  ],
}
`;

exports[`seq() handles two element match 1`] = `
{
  "value": [
    "#import",
    "foo",
  ],
}
`;

exports[`tracing 1`] = `
"..repeat
  ..wordz
    : 'a' (word)
    a   Ln 1
    ^
    ✓ kind 'word'
  ✓ wordz
  ..wordz
    x kind 'word'
  x wordz
✓ repeat"
`;
